# Fitness-App

./: .env.example  .gitignore  Dockerfile.frontend  README.md  app.json  docker-compose.override.yml.example  docker-compose.yml  metro.config.js  nginx.frontend.conf  package-lock.json  package.json  vitest.config.ts
.github/: dependabot.yml
app/: _layout.tsx  login.tsx
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql  002_tasks.sql  003_task_sets.sql  004_task_sets_constraints.sql  005_workout_exercises.sql  006_activity_entries.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  state.rs
backend/src/dto/: calorie_chat.rs  exercise.rs  mod.rs  pagination.rs  user.rs  workout.rs  workout_generator.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs  validation.rs
backend/src/models/: activity.rs  exercise.rs  mod.rs  task.rs  user.rs  workout.rs
backend/src/repository/: activity.rs  exercises.rs  mod.rs  tasks.rs  users.rs  workouts.rs
backend/src/routes/: auth.rs  exercises.rs  mod.rs  stats.rs  tasks.rs  users.rs  workouts.rs
backend/src/services/: ai.rs  auth.rs  exercise.rs  mod.rs  stats.rs  task.rs  workout.rs
backend/src/utils/: jwt.rs  mod.rs  password.rs  time.rs
backend/src/validators/: mod.rs  task.rs  user.rs  workout.rs
components/: FadeIn.tsx  ProgressRing.tsx  parallax-scroll-view.tsx
constants/: Colors.ts  dashboard-constants.ts  muscleGroups.ts
data/: index.ts  mockExercises.ts  mockWorkouts.ts
docs/: android-deployment.md  nginx-reverse-proxy.md
hooks/: index.ts  useDebounce.ts  (+5 more)
(+108 files in other folders)
