[package]
name = "fitpulse-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
jsonwebtoken = "10.3"
argon2 = "0.5"
rand = "0.10"
thiserror = "2.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["full", "test-util"] }
base64 = "0.22"
http-body-util = "0.1"
